--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,46 +8,56 @@
     <title>Grid</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="container">
-        <h1>GRID </h1>
-        <h3>flex review</h3>
-        <div class="flex-container">
-            <div class="one">div one</div>
-            <div class="two">div two</div>
-            <div class="three">div three</div>
-            <div class="four">div four</div>
-        </div>
-        <h3>Grid technique</h3>
-        <div class="grid-container">
-            <div class="item first-row">A</div>
-            <div class="item first-row">B</div>
-            <div class="item first-row last-column">C</div>
-            <div class="item">D</div>
-            <div class="item">E</div>
-            <div class="item last-column">F</div>
-            <div class="item">G</div>
-            <div class="item">H</div>
-            <div class="item last-column">I</div>
-        </div>
-        <h3>grid example-appartment floor plan</h3>
-        <div class="apartment">
-            <div class="room" id="living-room">Living Room</div>
-            <div class="room" id="kitchen">Kitchen</div>
-            <div class="room" id="bedroom">Bed Room</div>
-            <div class="room" id="bathroom">BathRoom</div>
-            <div class="room" id="closet">Closet</div>
-        </div>
-        <h3> Grid- line based placement of items to the cells</h3>
-        <div class="wrapper">
-            <div class="box1">One</div>
-            <div class="box2">Two</div>
-            <div class="box3">Three</div>
-            <div class="box4">Four</div>
+        <div class="header">Header</div>
+        <div class="sidebar">Side bar</div>
+        <div class="nav">Nav</div>
+        <div class="article">Articles
+            <h1>GRID </h1>
+            <h3>flex review</h3>
+            <div class="flex-container">
+                <div class="one">div one</div>
+                <div class="two">div two</div>
+                <div class="three">div three</div>
+                <div class="four">div four</div>
+            </div>
+            <h3>Grid technique</h3>
+            <div class="grid-container">
+                <div class="item first-row">A</div>
+                <div class="item first-row">B</div>
+                <div class="item first-row last-column">C</div>
+                <div class="item">D</div>
+                <div class="item">E</div>
+                <div class="item last-column">F</div>
+                <div class="item">G</div>
+                <div class="item">H</div>
+                <div class="item last-column">I</div>
+            </div>
+            <h3>grid example-appartment floor plan</h3>
+            <div class="apartment">
+                <div class="room" id="living-room">Living Room</div>
+                <div class="room" id="kitchen">Kitchen</div>
+                <div class="room" id="bedroom">Bed Room</div>
+                <div class="room" id="bathroom">BathRoom</div>
+                <div class="room" id="closet">Closet</div>
+            </div>
+            <h3> Grid- line based placement of items to the cells</h3>
+            <div class="wrapper">
+                <div class="box1">One</div>
+                <div class="box2">Two</div>
+                <div class="box3">Three</div>
+                <div class="box4">Four</div>
+            </div>
         </div>
 
 
+
+        <footer class="footer">Footer</footer>
     </div>
-    
+
+
 </body>
+
 </html>
