--- a/dynamic-grid.html
+++ b/dynamic-grid.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>making grids dynamic</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dynamic.css">
 </head>
 <body>
-    <h3>advanced propertis that make grids dynamic</h3>
+    <h3>Advanced Grid properties </h3>
+    <h4>Make grids dynamic</h4>
             <div class="dynamic-grid">
                 <div class="grid-item">
                     <p>Odin 1</p>
